# firecloud-forecast

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: precompute-pages.yml
app/: overlay.py  server.py  timing.py
app/static/: index.html
app/tests/: test_overlay.py  test_server.py
apps/desktop/: README.md
apps/notebook/: forecast-map.ipynb
apps/web/: README.md
docs/paper/: paper-draft.md  paper.tex  references.bib
loop/: .gitignore  CHARTER.md  PROGRESS.md  PROMPT.md  README.md  TASKS.md  agent-settings.json  conftest.py  coveragerc  loop.sh  pytest.ini  run_team_issue.sh  verify.sh
loop/data/: README.md
loop/firecloud_ml/: __init__.py  __main__.py  metrics.py  model.py  pipeline.py  schema.py  split.py
loop/roles/: evaluator.md  generator.md  intake.md  release_manager.md  sprint_planner.md  technical_planner.md
loop/schemas/: eval_report.schema.json  generator_report.schema.json  owner_brief.schema.json  (+3 more)
predictor/: __init__.py  cli.py  cloud_motion.py  cloud_top.py  clouds.py  cross_section.py  cross_section_plot.py  features.py  fetch.py  geometry.py  gfs.py  gfs_smoke.py  grid_score.py  illumination.py  local_field.py  local_product.py  national_field.py  national_physics.py  national_product.py  national_refine.py  normalize.py  nowcast.py  precompute.py  profiles.py  ray_path.py  remote_product.py  rules.py  satellite.py  score.py  solar_event.py  sounding_plot.py  spatial.py  stability.py  sunset_grid.py  sunward_section.py  thermo.py  uncertainty.py
research/: README.md  explainer.html
(+135 files in other folders)
