[project]
name = "firecloud-forecast"
version = "0.1.0"
description = "Physics-motivated sunset-glow condition forecasting"
requires-python = ">=3.11"
dependencies = [
    "herbie-data>=2024.8.0",
    "xarray>=2024.6.0",
    "cfgrib>=0.9.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "cartopy>=0.23",
    "astral>=3.2",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["predictor"]

[tool.pytest.ini_options]
testpaths = ["predictor/tests"]
markers = [
    "integration: marks tests requiring network (deselect with -m 'not integration')",
]
